[package]
name = "classnames-const-rs"
version = "0.1.0"
edition = "2024"
documentation = "https://docs.rs/classnames-const-rs"
description = "A Rust implementation of the classnames utility for conditionally joining class names at compile time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/flattoride/classnames-rs/tree/main/crates/classnames-const-rs"

[dependencies]
const_format = {version = "0.2.34", features = ["rust_1_64"]}
constcat = "0.6.1"
